# HuggingFace_AI_Agent_Course

./: README.md  dummy_agent_library.ipynb  environment.yml  first_agent.py  multiagent_notebook.ipynb  pyproject.toml  retrieval_agents.ipynb
First_Smolagent/: README.md  app.py  requirements.txt
First_Smolagent/tools/: web_search.py
RAG_workflow/: workflow.py
Second_Smolagent/: app.py
llama-index/: llama_agent.py
